custom-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tig-ingress
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /signin

spec:
  rules:
  #- host: test.example.local
  - http:
      paths:
        - path: /influxdb
          pathType: Prefix
          #pathType: ImplementationSpecific
          backend:
            service:
              name: influxdb-service
              port:
                number: 8086
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: grafana-service
              port:
                number: 3000
